--- a/statusBar/src/main/res/layout/activity_launcher.xml
+++ b/statusBar/src/main/res/layout/activity_launcher.xml
@@ -9,14 +9,32 @@
 	android:orientation="vertical">
 	<Button
 		android:textAllCaps="false"
-		android:onClick="complete"
+		android:onClick="statusBarcomplete"
 		android:layout_width="wrap_content"
 		android:layout_height="wrap_content"
-		android:text="complete"/>
+		android:text="statusBarcomplete"/>
 	<Button
 		android:textAllCaps="false"
 		android:layout_width="wrap_content"
 		android:layout_height="wrap_content"
-		android:onClick="noComplete"
-		android:text="noComplete"/>
+		android:onClick="statusBarElMa"
+		android:text="statusBarElMa"/>
+	<Button
+		android:textAllCaps="false"
+		android:layout_width="wrap_content"
+		android:layout_height="wrap_content"
+		android:onClick="statusBarNavBarcomplete"
+		android:text="statusBarNavBarcomplete"/>
+	<Button
+		android:textAllCaps="false"
+		android:layout_width="wrap_content"
+		android:layout_height="wrap_content"
+		android:onClick="statusBarNavBarElMa"
+		android:text="statusBarNavBarElMa"/>
+	<Button
+		android:textAllCaps="false"
+		android:layout_width="wrap_content"
+		android:layout_height="wrap_content"
+		android:onClick="after19statusBarNavBarComplete"
+		android:text="after19statusBarNavBarComplete"/>
 </LinearLayout>
