--- a/statusBar/src/main/res/values/styles.xml
+++ b/statusBar/src/main/res/values/styles.xml
@@ -7,5 +7,8 @@
 		<item name="colorPrimaryDark">@color/colorPrimaryDark</item>
 		<item name="colorAccent">@color/colorAccent</item>
 	</style>
+	<style name="windowActionBarOverlayThreme" parent="AppTheme">
+		<item name="windowActionBarOverlay">true</item>
+	</style>
 
 </resources>
