--- a/statusBar/src/main/res/layout/activity_flag.xml
+++ b/statusBar/src/main/res/layout/activity_flag.xml
@@ -3,13 +3,13 @@
               android:layout_width="match_parent"
               android:layout_height="match_parent"
               android:orientation="vertical"
-              android:background="#66FF4081"
               android:paddingTop="50dp"
               android:fitsSystemWindows="true"
 	>
 
 	<!--android:fitsSystemWindows="true"-->
 	<TextView
+		android:background="@color/colorPrimary"
 		android:layout_width="match_parent"
 		android:layout_height="45dp"
 		android:gravity="center"
