--- a/mvvm/src/main/res/layout/activity_lambda.xml
+++ b/mvvm/src/main/res/layout/activity_lambda.xml
@@ -1,9 +1,39 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context=".activity.LambdaActivity">
+<layout
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    >
 
-</android.support.constraint.ConstraintLayout>
+    <data>
+
+        <variable
+            name="presenter"
+            type="com.example.mvmm.activity.LambdaActivity.Presenter"/>
+
+        <variable
+            name="employee"
+            type="com.example.mvmm.bean.Employee"/>
+    </data>
+
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical">
+
+        <Button
+            android:textAllCaps="false"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:onClick="@{() -> presenter.onEmployeeClick(employee)}"
+            android:text="@{employee.firstName}"/>
+
+        <Button
+            android:textAllCaps="false"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:onClick="@{(v) -> presenter.onEmployeeLongClick(employee, context)}"
+            android:onFocusChange="@{(v, fcs) -> presenter.onFocusChange(employee)}"
+            android:text="@{employee.lastName}"/>
+
+    </LinearLayout>
+</layout>
