--- a/mvvm/src/main/res/layout/activity_expression.xml
+++ b/mvvm/src/main/res/layout/activity_expression.xml
@@ -1,9 +1,42 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context=".activity.ExpressionActivity">
+<layout
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
-</android.support.constraint.ConstraintLayout>
+    <data>
+
+        <import type="android.view.View"/>
+
+        <variable
+            name="employee"
+            type="com.example.mvmm.bean.Employee"/>
+    </data>
+
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical">
+
+        <ImageView
+            android:id="@+id/avatar"
+            android:layout_width="150dp"
+            android:layout_height="150dp"
+            android:visibility="@{employee.isFired ? View.INVISIBLE : View.VISIBLE}"
+            app:imageUrl="@{employee.avatar}"
+            app:placeholder="@{@drawable/default_avatar}"/>
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="@{employee.firstName}"
+            android:visibility="@{avatar.visibility}"/>
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="@{employee.lastName}"
+            android:visibility="@{avatar.visibility}"/>
+
+    </LinearLayout>
+</layout>
