--- a/mvvm/src/main/res/layout/activity_expression.xml
+++ b/mvvm/src/main/res/layout/activity_expression.xml
@@ -37,6 +37,10 @@
             android:layout_height="wrap_content"
             android:text="@{employee.lastName}"
             android:visibility="@{avatar.visibility}"/>
-
+        <ImageView
+            android:layout_width="150dp"
+            android:layout_height="150dp"
+            android:background="@{ @color/colorPrimary}"
+          />
     </LinearLayout>
 </layout>
