--- a/constraintlayoutdemo/src/main/res/layout/activity_constrainit_spread_inside.xml
+++ b/constraintlayoutdemo/src/main/res/layout/activity_constrainit_spread_inside.xml
@@ -1,45 +1,50 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context=".ConstraintLayoutActivity">
-    <!--layout_constraintHorizontal_chainStyle="spread_inside" 第一个子view 需设置，靠边的两个无空隙-->
-    <TextView
-        app:layout_constraintHorizontal_chainStyle="spread_inside"
-        android:id="@+id/tab1"
-        android:layout_width="40dp"
-        android:layout_height="30dp"
-        android:background="#f67"
-        android:gravity="center"
-        android:text="Tab1Tab1Tab1"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toLeftOf="@+id/tab2" />
+    android:layout_height="match_parent">
+
+    <android.support.constraint.ConstraintLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        tools:context=".ConstraintLayoutActivity">
+        <!--layout_constraintHorizontal_chainStyle="spread_inside" 第一个子view 需设置，靠边的两个无空隙-->
+        <TextView
+            android:id="@+id/tab1"
+            android:layout_width="40dp"
+            android:layout_height="30dp"
+            android:background="#f67"
+            android:gravity="center"
+            android:text="Tab1Tab1Tab1"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintHorizontal_chainStyle="spread_inside"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toLeftOf="@+id/tab2" />
 
 
-    <TextView
-        android:id="@+id/tab2"
-        android:layout_width="40dp"
-        android:layout_height="30dp"
-        android:background="#A67"
-        android:gravity="center"
-        android:text="Tab2Tab2"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintLeft_toRightOf="@id/tab1"
-        app:layout_constraintRight_toLeftOf="@+id/tab3" />
+        <TextView
+            android:id="@+id/tab2"
+            android:layout_width="40dp"
+            android:layout_height="30dp"
+            android:background="#A67"
+            android:gravity="center"
+            android:text="Tab2Tab2"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintLeft_toRightOf="@id/tab1"
+            app:layout_constraintRight_toLeftOf="@+id/tab3" />
 
 
-    <TextView
-        android:id="@+id/tab3"
-        android:layout_width="40dp"
-        android:layout_height="30dp"
-        android:background="#767"
-        android:gravity="center"
-        android:text="Tab3"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintLeft_toRightOf="@id/tab2"
-        app:layout_constraintRight_toRightOf="parent" />
+        <TextView
+            android:id="@+id/tab3"
+            android:layout_width="40dp"
+            android:layout_height="30dp"
+            android:background="#767"
+            android:gravity="center"
+            android:text="Tab3"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintLeft_toRightOf="@id/tab2"
+            app:layout_constraintRight_toRightOf="parent" />
 
-</android.support.constraint.ConstraintLayout>
+    </android.support.constraint.ConstraintLayout>
+</LinearLayout>
