--- a/statusBar/src/main/res/layout/activity_launcher.xml
+++ b/statusBar/src/main/res/layout/activity_launcher.xml
@@ -1,46 +1,121 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-	xmlns:android="http://schemas.android.com/apk/res/android"
-	xmlns:app="http://schemas.android.com/apk/res-auto"
-	xmlns:tools="http://schemas.android.com/tools"
-	android:layout_width="match_parent"
-	android:layout_height="match_parent"
-	tools:context=".LauncherActivity"
-	android:orientation="vertical">
-	<Button
-		android:textAllCaps="false"
-		android:onClick="statusBarcomplete"
-		android:layout_width="wrap_content"
-		android:layout_height="wrap_content"
-		android:text="statusBarcomplete"/>
-	<Button
-		android:textAllCaps="false"
-		android:layout_width="wrap_content"
-		android:layout_height="wrap_content"
-		android:onClick="statusBarElMa"
-		android:text="statusBarElMa"/>
-	<Button
-		android:textAllCaps="false"
-		android:layout_width="wrap_content"
-		android:layout_height="wrap_content"
-		android:onClick="statusBarNavBarcomplete"
-		android:text="statusBarNavBarcomplete"/>
-	<Button
-		android:textAllCaps="false"
-		android:layout_width="wrap_content"
-		android:layout_height="wrap_content"
-		android:onClick="statusBarNavBarElMa"
-		android:text="statusBarNavBarElMa"/>
-	<Button
-		android:textAllCaps="false"
-		android:layout_width="wrap_content"
-		android:layout_height="wrap_content"
-		android:onClick="after19statusBarNavBarComplete"
-		android:text="after19statusBarNavBarComplete"/>
-	<Button
-		android:textAllCaps="false"
-		android:layout_width="wrap_content"
-		android:layout_height="wrap_content"
-		android:onClick="flag"
-		android:text="flag"/>
-</LinearLayout>
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent">
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical"
+        tools:context=".LauncherActivity">
+
+        <Button
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:onClick="statusBarcomplete"
+            android:text="statusBarcomplete"
+            android:textAllCaps="false" />
+
+        <Button
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:onClick="statusBarElMa"
+            android:text="statusBarElMa"
+            android:textAllCaps="false" />
+        <Button
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:onClick="statusBarElMaFixWindow"
+            android:text="statusBarElMaFixWindow"
+            android:textAllCaps="false" />
+
+        <Button
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:onClick="statusBarNavBarcomplete"
+            android:text="statusBarNavBarcomplete"
+            android:textAllCaps="false" />
+
+        <Button
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:onClick="statusBarNavBarElMa"
+            android:text="statusBarNavBarElMa"
+            android:textAllCaps="false" />
+
+        <Button
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:onClick="after19statusBarNavBarComplete"
+            android:text="after19statusBarNavBarComplete"
+            android:textAllCaps="false" />
+
+        <Button
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:onClick="flag"
+            android:text="flag"
+            android:textAllCaps="false" />
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
+
+            <Button
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:onClick="beforedanhuanSystemBar"
+                android:text="淡化SystemBar前"
+                android:textAllCaps="false" />
+
+            <Button
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:onClick="afterdanhuanSystemBar"
+                android:text="淡化SystemBar后"
+                android:textAllCaps="false" />
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
+
+            <Button
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:onClick="beforeyingcangStatusBarlow4"
+                android:text="隐藏StatusBarActivity4.0以前 前"
+                android:textAllCaps="false" />
+
+            <Button
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:onClick="afteryingcangStatusBarlow4"
+                android:text="隐藏StatusBarActivity4.0以前 后"
+                android:textAllCaps="false" />
+        </LinearLayout>
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
+
+            <Button
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:onClick="beforeyingcangStatusBarafter4"
+                android:text="隐藏StatusBarActivity4.0以后 前"
+                android:textAllCaps="false" />
+
+            <Button
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:onClick="afteryingcangStatusBarafter4"
+                android:text="隐藏StatusBarActivity4.0以后 后"
+                android:textAllCaps="false" />
+        </LinearLayout>
+    </LinearLayout>
+</ScrollView>
