--- a/statusBar/src/main/res/layout/activity_main.xml
+++ b/statusBar/src/main/res/layout/activity_main.xml
@@ -9,9 +9,8 @@
 
 	<ImageView
 		android:layout_width="match_parent"
-		android:layout_height="match_parent"
+		android:layout_height="300dp"
 		android:background="@mipmap/bg"
-		app:layout_constraintBottom_toBottomOf="parent"
 		app:layout_constraintLeft_toLeftOf="parent"
 		app:layout_constraintRight_toRightOf="parent"
 		app:layout_constraintTop_toTopOf="parent"/>
