--- a/statusBar/src/main/res/values/colors.xml
+++ b/statusBar/src/main/res/values/colors.xml
@@ -1,6 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-	<color name="colorPrimary">#008577</color>
-	<color name="colorPrimaryDark">#00574B</color>
-	<color name="colorAccent">#D81B60</color>
+<!--	<color name="colorPrimary">#008577</color>-->
+<!--	<color name="colorPrimaryDark">#00574B</color>-->
+<!--	<color name="colorAccent">#D81B60</color>-->
+
+
+	<color name="colorPrimary">#002147</color>
+	<color name="colorPrimaryDark">#66807f7f</color>
+	<color name="colorAccent">#002147</color>
+	<color name="window_background_color">#ffffff</color>
+
 </resources>
