--- a/statusBar/src/main/res/layout/activity_main_fix_window.xml
+++ b/statusBar/src/main/res/layout/activity_main_fix_window.xml
@@ -14,6 +14,7 @@
             android:layout_height="match_parent"
             android:orientation="vertical">
             <TextView
+                android:visibility="gone"
                 android:textColor="@color/window_background_color"
                 android:background="@android:color/black"
                 android:gravity="center"
