--- a/statusBar/src/main/res/values-v23/styles.xml
+++ b/statusBar/src/main/res/values-v23/styles.xml
@@ -3,7 +3,8 @@
 
     <style name="AppTheme" parent="BaseAppTheme">
         <!-- Customize your theme here. -->
-        <item name="android:windowLightStatusBar">true</item>
+        <!--设置浅色状态栏，变成状态栏图标颜色变成黑色 设置到了SystemUiVisibility的一个flag-->
+<!--        <item name="android:windowLightStatusBar">true</item>-->
     </style>
 
 </resources>
