--- a/statusBar/src/main/res/layout/activity_launcher.xml
+++ b/statusBar/src/main/res/layout/activity_launcher.xml
@@ -14,11 +14,16 @@
         <Button
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:onClick="statusBarTheme"
+            android:text="statusBarTheme"
+            android:textAllCaps="false" />
+
+        <Button
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:onClick="statusBarcomplete"
             android:text="statusBarcomplete"
             android:textAllCaps="false" />
-
-
 
         <Button
             android:layout_width="wrap_content"
