setStatusBarColor 不能设置FLAG_TRANSLUCENT_STATUS（会设置View .SYSTEM_UI_FLAG_LAYOUT_FULLSCREEN，View.SYSTEM_UI_FLAG_LAYOUT_STABLE），所以换个思路就是用手动通过setSystemUiVisibility设置这两个标志位

--- a/statusBar/src/main/res/layout/activity_launcher.xml
+++ b/statusBar/src/main/res/layout/activity_launcher.xml
@@ -17,6 +17,12 @@
             android:onClick="statusBarTheme"
             android:text="statusBarTheme"
             android:textAllCaps="false" />
+        <Button
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:onClick="StatusBarDrawsBarBackgroud"
+            android:text="StatusBarDrawsBarBackgroud"
+            android:textAllCaps="false" />
 
         <Button
             android:layout_width="wrap_content"
