--- a/statusBar/src/main/res/layout/activity_elma_fixwindow.xml
+++ b/statusBar/src/main/res/layout/activity_elma_fixwindow.xml
@@ -17,5 +17,15 @@
 		app:layout_constraintLeft_toLeftOf="parent"
 		app:layout_constraintRight_toRightOf="parent"
 		app:layout_constraintTop_toTopOf="parent"/>
-
+	<TextView
+		android:gravity="center"
+		android:textColor="@color/white"
+		android:background="@color/colorAccent"
+		app:layout_constraintBottom_toBottomOf="parent"
+		app:layout_constraintRight_toRightOf="parent"
+		app:layout_constraintLeft_toLeftOf="parent"
+		android:text="bottom"
+		android:layout_width="match_parent"
+		android:layout_height="80dp"
+		android:textSize="20sp"></TextView>
 </android.support.constraint.ConstraintLayout>
