--- a/statusBar/src/main/res/layout/activity_launcher.xml
+++ b/statusBar/src/main/res/layout/activity_launcher.xml
@@ -10,13 +10,23 @@
         android:layout_height="match_parent"
         android:orientation="vertical"
         tools:context=".LauncherActivity">
-
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
         <Button
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:onClick="otherLauncher"
-            android:text="otherLauncher"
+            android:onClick="otherLauncherFixWindow"
+            android:text="otherLauncherFixWindow"
             android:textAllCaps="false" />
+            <Button
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:onClick="otherLauncher"
+                android:text="otherLauncher"
+                android:textAllCaps="false" />
+        </LinearLayout>
         <Button
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
