--- a/statusBar/src/main/res/values/colors.xml
+++ b/statusBar/src/main/res/values/colors.xml
@@ -14,5 +14,5 @@
 	<color name="white">#ffffff</color>
 	<color name="gray">#4d4d4d</color>
 	<color name="light_gray">#bfbfbf</color>
-
+	<color name="darker_gray">#aaa</color>
 </resources>
