--- a/statusBar/src/main/res/layout/activity_method5.xml
+++ b/statusBar/src/main/res/layout/activity_method5.xml
@@ -5,7 +5,11 @@
     android:background="@color/colorAccent"
     android:orientation="vertical"
     >
-
+    <View
+        android:id="@+id/status_view"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:background="@color/colorPrimary" />
 
     <android.support.v7.widget.Toolbar
         android:layout_width="match_parent"
