--- a/immersionbar-sample/src/main/res/layout/activity_pic_color.xml
+++ b/immersionbar-sample/src/main/res/layout/activity_pic_color.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/activity_main"
     android:layout_width="match_parent"
@@ -63,5 +63,9 @@
             style="@style/btn"
             android:text="恢复初始值" />
     </LinearLayout>
-
-</LinearLayout>
+    <Button
+        android:layout_alignParentBottom="true"
+        android:layout_width="match_parent"
+        android:layout_height="100dp"
+        android:text="我是最底部" />
+</RelativeLayout>
