--- a/transitiondemo/src/main/res/layout/activity_transition.xml
+++ b/transitiondemo/src/main/res/layout/activity_transition.xml
@@ -1,5 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent" android:layout_height="match_parent" >
+<LinearLayout
     android:layout_width="match_parent" android:layout_height="50dp"
     android:orientation="horizontal"
     android:id="@+id/layout_root_view">
@@ -28,3 +30,12 @@
         android:layout_width="0dp"
         android:layout_height="match_parent"></ImageView>
 </LinearLayout>
+    <Button
+        android:textAllCaps="false"
+        android:layout_below="@id/layout_root_view"
+        android:text="finish"
+        android:onClick="onClickFinish"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"></Button>
+
+</RelativeLayout>
